testsuite/tests/grammar/invalid_lexers/pattern_4.lkt
import common

lexer foo_lexer {
    val pat = p"["
    Example <- p"{pat}"
}

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}
